[project]
name = "nuh-data"
version = "0.1.0"
description = "Pydantic models for NUH data schemas"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nuh_data"]

[dependency-groups]
dev = [
    "linkml>=1.11.1",
    "mkdocs>=1.6",
    "mkdocs-material>=9.0",
]
